--- a/20240217/index.html
+++ b/20240217/index.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第３回</title>
-    <meta name="description" content="第２回です">
+    <title>第3回</title>
+    <meta name="description" content="第3回です">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+
     <h1>サービス</h1>
 
     <div class="section-text">
 
-        <div class="first-text">
-            <div class="about-img"><img src="img/main_1.jpg" alt="外国の祭り"></div>
-            <li>サービス1</li>
+        <div class="all-text">
+            <img src="img/main_1.jpg" alt="外国の祭り">
+            <h2>サービス1</h2>
             <p class="about-text">サービス1サービス1サービス1サービス1サービス1サービス1</p>
         </div>
 
-        <div class="second-text">
-            <div class="about-img"><img src="img/main_2.png" alt="ダンス"></div>
-            <li>サービス2</li>
+        <div class="all-text">
+            <img src="img/main_2.png" alt="ダンス">
+            <h2>サービス2</h2>
             <p class="about-text">サービス2サービス2サービス2サービス2サービス2サービス2</p>
         </div>
 
-        <div class="third-text">
-            <div class="about-img"><img src="img/main_3.png" alt="乾杯"></div>
-            <li>サービス3</li>
+        <div class="all-text">
+            <img src="img/main_3.png" alt="乾杯">
+            <h2>サービス3</h2>
             <p class="about-text">サービス3サービス3サービス3サービス3サービス3サービス3</p>
         </div>
 
